# crewAI

./: .gitignore  crewAI.code-workspace  main.py  mynotes.md  notes.md  update_crewai.sh  validate_tasks_yaml.py
21jun_xjp/: README.md  pyproject.toml
21jun_xjp/src/21jun_xjp/: crew.py  main.py
22jun_xjp/: README.md  pyproject.toml
22jun_xjp/src/22jun_xjp/: crew.py  main.py
22jun_xjp/src/22jun_xjp/config/: agents.yaml  tasks.yaml
docs/: docs.json
docs/en/mcp/: overview.mdx
jun22_xjp/: .gitignore  log.txt  long_term_memory.db  pyproject.toml
jun22_xjp/knowledge/: PRC_GrayZone_Planner.md  XJP_Instructions_1.md
jun22_xjp/output/: final_response.md
jun22_xjp/src/jun22_xjp/: crew.py  main.py
jun22_xjp/src/jun22_xjp/config/: agents.yaml  tasks.yaml
may19_1/: kailua_report.md  kailua_report_2.md  pyproject.toml
may19_1/src/may19_1/: crew.py  main.py
may19_1/src/may19_1/tools/: rag_toool.py
may20_xjp_2/: log.txt  long_term_memory.db  output.log.txt
may20_xjp_2/knowledge/: XJP_Instructions_1.md
may20_xjp_2/output/: final_response.md
may20_xjp_2/src/may20_xjp_2/: crew.py  main.py
may20_xjp_2/src/may20_xjp_2/config/: agents.yaml  tasks.yaml
may29_xjp/: .gitignore  log.txt  long_term_memory.db
may29_xjp/knowledge/: PRC_GrayZone_Planner.md
may29_xjp/output/: final_response.md
may29_xjp/src/may20_xjp_2/: crew copy.py  crew.py  crew_old.py  main.py  tests1.py
may29_xjp/src/may20_xjp_2/config/: agents.yaml  tasks.yaml  tasks_old.yaml
old_vers/may19_1/: Kailua_report3.md  README.md
old_vers/may19_1/src/may19_1/config/: agents.yaml  tasks.yaml
old_vers/may20_xjp_2/: README.md  long_term_memory.db  pyproject.toml
old_vers/may20_xjp_2/output/: final_response.md
old_vers/may20_xjp_2/src/may20_xjp_2/config/: agents.yaml  tasks.yaml
path/to/: mcp_settings.json
src/crewai/utilities/: internal_instructor.py
