[project]
name = "21jun_xjp"
version = "0.1.0"
description = "21jun_xjp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
21jun_xjp = "21jun_xjp.main:run"
run_crew = "21jun_xjp.main:run"
train = "21jun_xjp.main:train"
replay = "21jun_xjp.main:replay"
test = "21jun_xjp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
