[project]
name = "jun22_xjp"
version = "0.1.0"
description = "jun22_xjp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
jun22_xjp = "jun22_xjp.main:run"
run_crew = "jun22_xjp.main:run"
train = "jun22_xjp.main:train"
replay = "jun22_xjp.main:replay"
test = "jun22_xjp.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
