[project]
name = "may20_xjp_2"
version = "0.1.0"
description = "may20-xjp-2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "docling>=2.33.0",
]

[project.scripts]
may20_xjp_2 = "may20_xjp_2.main:run"
run_crew = "may20_xjp_2.main:run"
train = "may20_xjp_2.main:train"
replay = "may20_xjp_2.main:replay"
test = "may20_xjp_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
